--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,11 @@
-header li {
-  font-size: 20px;
+header .headerlist {
+  display: flex;
+  justify-content: flex-end;
+}
+header .headerlist li {
+  font-size: 22px;
+  padding-right: 3.6235%;
+  padding-top: 27px;
 }
 
 main {
@@ -7,6 +13,7 @@ main {
   max-width: 1170px;
   margin: auto;
   font-size: 40px;
+  padding: 0 2.75%;
 }
 
 .display {
@@ -14,12 +21,26 @@ main {
 }
 
 h2 {
-  font-size: 80px;
+  font-size: 43px;
   text-align: center;
 }
 
+body .kv {
+  position: relative;
+}
+body .kv .kvbgimg {
+  position: absolute;
+}
+body .kv .kvbgimg .kvbgimg,
+body .kv .kvbgimg .kv-wrapper {
+  margin-top: 120px;
+}
+body .kv .kv-person_img3,
+body .kv .kv-person_img1 {
+  padding-bottom: 14px;
+}
 body .kv .kv-text {
-  text-align: center;
+  z-index: 1;
 }
 body .kv .kv-text .kv-txt1 {
   font-size: 29px;
@@ -33,19 +54,30 @@ body .kv .kv-text .kv-txt3 {
 body .kv .kv-wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 0 2.75%;
+  aspect-ratio: 13/7;
+}
+body .kv .kv-wrapper .kvimg-content1,
+body .kv .kv-wrapper .kvimg-content2 {
+  width: 23%;
 }
 body .kv .kv-wrapper .kvimg {
-  width: 23%;
+  width: 100%;
   display: block;
 }
-body .kv .kv-wrapper .kvimg-content1 {
-  margin-left: 4.05%;
+body main .PetLivers {
+  width: auto;
 }
-body .kv .kv-wrapper .kvimg-content2 {
-  text-align: right;
+body main .PetLivers .petlivers-title {
+  margin-top: 104px;
+  margin-bottom: 61px;
 }
 body main .PetLivers .PetLivers-content {
   background-color: #000000;
+  max-width: none;
+}
+body main .PetLivers .PetLivers-content .petliverswrap {
   display: flex;
   flex-wrap: wrap;
 }
@@ -53,6 +85,13 @@ body main .PetLivers .PetLivers-content .PetLivers-box {
   width: 19.1%;
   background: #FFFFFF;
   border: 3.79px solid #EA5555;
+  width: 25%;
+}
+body main .PetLivers .PetLivers-content .PetLivers-box img {
+  margin: 20px 0.2945% 26.74px 0.2945%;
+}
+body main .PetLivers .PetLivers-content .PetLivers-box p {
+  margin-left: 1.4775%;
 }
 body main .PetLivers .PetLivers-content .txtLivers,
 body main .PetLivers .PetLivers-content .txtName {
@@ -60,4 +99,30 @@ body main .PetLivers .PetLivers-content .txtName {
 }
 body main .PetLivers .PetLivers-content .txtComent {
   font-size: 16px;
+  margin-bottom: 27.56px;
+}
+body main .About .display .About-img2 {
+  margin-left: 13.25%;
+}
+body main .About .display .textblock {
+  display: block;
+  margin-left: 16.8%;
+}
+body main .About .display .AboutText-content {
+  font-size: 21px;
+}
+body main .About .display .aboutimg {
+  width: 25%;
+}
+body .Sponser {
+  text-align: center;
+}
+body .Sponser .sponser-img1 {
+  width: 70.5%;
+}
+body .Sponser .sponser-img2 {
+  width: 29%;
+}
+body .Sponser .sponserText {
+  font-size: 40px;
 }/*# sourceMappingURL=main.css.map */
