--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,4 +125,172 @@ body .Sponser .sponser-img2 {
 }
 body .Sponser .sponserText {
   font-size: 40px;
+}
+
+#service {
+  position: relative;
+}
+#service h2 {
+  margin-bottom: 40px;
+  font-weight: bold;
+}
+#service h3 {
+  font-size: 18px;
+}
+#service p {
+  font-size: 16px;
+}
+#service .boxs {
+  justify-content: center;
+}
+#service .boxs .box {
+  border: solid 3.42px #9067E9;
+  width: 31.959844%;
+  margin-right: 1.93107%;
+  box-shadow: 12.435px 17.875px #9067E9;
+  display: flex;
+  flex-direction: column;
+}
+#service .boxs::after {
+  content: "";
+}
+#service .boxs .imgbox {
+  padding-top: 5.587478%;
+  padding-left: 10.455764%;
+  flex-basis: 0;
+  flex-grow: 1;
+}
+#service .boxs img {
+  width: 32.769797%;
+}
+
+#voice h2 {
+  margin-top: 97px;
+  margin-bottom: 71px;
+}
+#voice .v-container {
+  justify-content: space-between;
+}
+#voice .v-container img {
+  width: 43.568182%;
+}
+#voice .v-container div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#voice .v-container .text1 {
+  font-size: 16px;
+  margin-bottom: 25px;
+}
+#voice .v-container .text2 {
+  font-size: 21px;
+  margin-bottom: 27px;
+}
+#voice .v-container .text3 {
+  font-size: 18px;
+}
+#voice .v-container div {
+  display: flex;
+}
+
+#contact h2 {
+  margin-top: 100px;
+  margin-bottom: 40px;
+  font-weight: bold;
+}
+#contact .c-container h2 {
+  font-size: 25px;
+}
+#contact .c-container p {
+  font-size: 18px;
+}
+#contact .c-container .for {
+  flex-basis: 0;
+  flex-grow: 1;
+}
+#contact .c-container .forclient {
+  border-right: solid 1px black;
+}
+#contact .c-container .forclient p {
+  font-size: 18px;
+  margin-bottom: 44px;
+}
+#contact .c-container .forclient form .font {
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+}
+#contact .c-container .forclient form .font label {
+  margin-bottom: 21.97px;
+}
+#contact .c-container .forclient form .font .area {
+  border: solid 1px;
+  margin-bottom: 25px;
+  margin-right: 8.8%;
+}
+#contact .c-container .forclient form .font textarea {
+  height: 332px;
+}
+#contact .c-container .forclient form #btn {
+  display: flex;
+  justify-content: center;
+  margin-right: 8.8%;
+  background-color: black;
+}
+#contact .c-container .forclient form #btn .btn {
+  font-size: 18px;
+  text-align: center;
+  color: white;
+  margin: 23px 0 30px 0;
+}
+#contact .c-container .forliver h2 {
+  text-align: left;
+  margin-left: 6.3%;
+}
+#contact .c-container .forliver p {
+  margin-left: 6.3%;
+}
+#contact .c-container .forliver .whatsapp {
+  margin-left: 6.3%;
+  margin-top: 200px;
+  align-items: center;
+}
+#contact .c-container .forliver .whatsapp .mark {
+  width: 100%;
+}
+#company h2 {
+  font-weight: bold;
+  margin-top: 100px;
+}
+#company .company {
+  margin-top: 40px;
+}
+#company .company .companyleft {
+  flex-basis: 0;
+  flex-grow: 1;
+}
+#company .company .companyleft h3 {
+  margin-top: 15px;
+}
+#company .company .companyleft h4 {
+  font-size: 21px;
+  margin-top: 20px;
+}
+#company .company .companyleft p {
+  margin-top: 20px;
+  font-size: 18px;
+}
+#company .company .map {
+  flex-basis: 0;
+  flex-grow: 1;
+}
+
+footer {
+  margin-top: 239px;
+  text-align: center;
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  padding: 24px 0;
 }/*# sourceMappingURL=main.css.map */
