--- a/_body.scss
+++ b/_body.scss
@@ -94,11 +94,9 @@ body {
 
             .PetLivers-content {
                 background-color: #000000;
-                max-width: none;
+                padding: 98.01px 10.5555%;
 
-                .petliverswrap1 {
-                    margin-top: 97px;
-                }
+
 
                 .petliverswrap1,
                 .petliverswrap2 {
@@ -208,7 +206,7 @@ body {
                     margin-top: 28px;
                     margin-left: 13.25%;
                     box-shadow: #F9C83B;
-                    
+
                 }
 
                 .textblock {
