--- a/_body.scss
+++ b/_body.scss
@@ -1,4 +1,5 @@
- .maxwidth {
+
+.maxwidth {
     max-width: 1170px;
     margin: auto;
 }
@@ -21,10 +22,25 @@ h2 {
     text-align: center;
 }
 
+// 追加
+.animation{
+ 
+        opacity : 0;
+        visibility: hidden;
+        transition: 1.5s;
+        transform: translateY(200px);
+    
+}
+.active{
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+//   追加ここまで
+
 
 
 body {
-
 
     .kv {
         position: relative;
