--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,14 @@
+header .animation {
+  opacity: 0;
+  visibility: hidden;
+  transition: 1.5s;
+  transform: translateY(200px);
+}
+header .active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
 header .headerlist {
   display: flex;
   justify-content: flex-end;
@@ -26,6 +37,19 @@ main {
 h2 {
   font-size: 43px;
   text-align: center;
+}
+
+.animation {
+  opacity: 0;
+  visibility: hidden;
+  transition: 1.5s;
+  transform: translateY(200px);
+}
+
+.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
 }
 
 body .kv {
